# tehai-core

./: .gitignore  ASSUMPTIONS.ja.md  ASSUMPTIONS.md  FUTURE.ja.md  FUTURE.md  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml  verification_report.md
.github/workflows/: ci.yml
docs/: ab-experiment.html  ai-native-org.html  manual.html  philosophy.html
examples/: ensemble.example.json  gama_config.example.json  gama_config.macstudio.example.json  moa_vs_strong.example.json  sample_run.py
experiments/: README.md  REPORT.md  __init__.py  moa_vs_strong.py  org_vs_dataflow.py  results.json
tehai/: __init__.py  architect.py  backends.py  benchmark.py  cli.py  config.py  costmodel.py  decompose_guard.py  evaluation.py  executor.py  flat_dataflow.py  judge.py  logger.py  model_router.py  models.py  orchestrator.py  org_templates.py  permissions.py  registry.py  review_planner.py  reviewer.py  sandbox.py  schema.py  scoring.py
tehai/schemas/: agent_template.schema.json  log_record.schema.json  task_contract.schema.json  team_contract.schema.json  team_registry.schema.json
tests/: _util.py  test_benchmark.py  test_config.py  test_decompose_guard.py  test_ensemble.py  test_evaluation.py  test_executor.py  test_experiment.py  test_flat_dataflow.py  test_gama.py  test_judge.py  test_llm_backend.py  test_model_router.py  test_models.py  test_orchestrator_e2e.py  test_permissions.py  test_registry_and_orgs.py  test_review_planner.py  test_sandbox.py  test_schema.py  test_scoring_review.py  test_teams.py  test_tool.py
verification/: run_verification.py
(+11 files in other folders)
